Fix inner-bubble text-alignment

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -659,6 +659,9 @@ $left-gutter: 64px;
     //box-sizing: content-box;
     //display: flex;
     //flex-wrap: wrap;
+
+    // Don't inherit bubbleArea alignment
+    text-align: left;
 }
 .sc_EventTile_bubble_incoming {
     @extend .sc_EventTile_bubble;
